--- a/JAVASCRIPT/Proyecto Pern Stack/frontend/src/index.css
+++ b/JAVASCRIPT/Proyecto Pern Stack/frontend/src/index.css
@@ -2,9 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
-body {
-  background-color: black;
-  color: white;
+body{
+  background-color: #101010;
+  color: #fff;
 }
